﻿+++++++++++
Python News
+++++++++++

What's New in Python 3.2 Alpha 3?
=================================

*Release date: XX-Oct-2010*

Core and Builtins
-----------------

- Issue #9797: pystate.c wrongly assumed that zero couldn't be a valid
  thread-local storage key.

Library
-------

- Logging: Added QueueHandler class to facilitate logging usage with
  multiprocessing.

- Issue #9707: Rewritten reference implementation of threading.local which
  is friendlier towards reference cycles.  This change is not normally
  visible since an optimized C implementation (_thread._local) is used
  instead.

- Issue #6394: os.getppid() is now supported on Windows.  Note that it will
  still return the id of the parent process after it has exited.  This process
  id may even have been reused by another unrelated process.

- Issue #9792: In case of connection failure, socket.create_connection()
  would swallow the exception and raise a new one, making it impossible
  to fetch the original errno, or to filter timeout errors.  Now the
  original error is re-raised.

- Issue #9758: When fcntl.ioctl() was called with mutable_flag set to True,
  and the passed buffer was exactly 1024 bytes long, the buffer wouldn't
  be updated back after the system call.  Original patch by Brian Brazil.

- Updates to the random module:

  * Document which parts of the module are guaranteed to stay the same
    across versions and which parts are subject to change.

  * Update the seed() method to use all of the bits in a string
    instead of just the hash value.  This makes better use of the
    seed value and assures the seeding is platform independent.
    Issue #7889.

  * Improved the random()-->integer algorithm used in choice(),
    shuffle(), sample(), randrange(), and randint().  Formerly, it
    used int(n*random()) which has a slight bias whenever n is not
    a power of two.  Issue #9025.

  * Improved documentation of arguments to randrange().  Issue #9379.
